--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="direcci_n">Dirección</string>
     <string name="telefono">Teléfono</string>
     <string name="registrarse">registrarse</string>
+    <string name="registro">Registro</string>
+    <string name="ingresa_los_siguientes_datos">Ingresa los siguientes datos</string>
+    <string name="correo">Correo</string>
+    <string name="ya_tienes_con_una_cuenta">¿Ya tienes con una cuenta?</string>
+    <string name="iniciar_seccion">iniciar sección</string>
 </resources>
